updated common and users properties file

--- a/ApiUsers.properties
+++ b/ApiUsers.properties
@@ -2,3 +2,5 @@ server.port=9392
 
 album.url=http://albums-ws/album/users
 album.url.id=http://albums-ws/album/%s/users
+
+login.url.path=/users/login
