--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,5 @@
 eureka.client.service-url.defaultZone=http://localhost:8010/eureka
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
+
+secretkey=6jkYF+NrlzGP54KEJCxDTPxbvw+K7nz4gQAJ+7inU3c=eZqMgSxd4UNZ2EySD_DtTkOT7vPIHDWUA1Ho
